Fix: z-index on items

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -951,7 +951,6 @@ body {
   margin-top: 20px;
   padding-top: 20px;
   border-top: 1px solid #212020;
-  z-index: 20;
 }
 
 .product-info__field {
