--- a/src/scss/_graphicCards.scss
+++ b/src/scss/_graphicCards.scss
@@ -75,7 +75,6 @@
 .product {
 	height: 350px;
 	width: 465px;
-
 	&__wrapper {
 		width: 100%;
 		overflow: hidden;
@@ -240,7 +239,6 @@
 	margin-top: 20px;
 	padding-top: 20px;
 	border-top: 1px solid #212020;
-	z-index: 20;
 
 	&__field {
 		font-size: 14px;
